--- a/posts.html
+++ b/posts.html
@@ -46,54 +46,27 @@
    </p>
   </section>
   <main class="card-container">
-  <a href="post-copilots.html" class="card-link">
+  <a href="posts/openai-needs-pm.html" class="card-link">
     <article class="card blog-post">
       <div class="badge gold">Snarky Post</div>
-      <h2>Why Copilots Crash</h2>
+      <h2>OpenAI Built the Ultimate Tool. But Clippy Might Still Win.</h2>
       <p class="card-date">June 15, 2025</p>
       <p class="card-excerpt">
-        The tool that helps you build things... can't remember what it just built.
+        OpenAI has built the most powerful AI on the planet, but brilliance alone doesn’t make a great product. Without better UX, memory handling, and real workflow support, ChatGPT risks being outpaced by dumber tools that just work.<br />
+The future of AI shouldn’t belong to Clippy, but without better product thinking, it just might.
       </p>
     </article>
   </a>
-  <a href="post-context.html" class="card-link">
+  <a href="posts/ai-as-companion.html" class="card-link">
     <article class="card blog-post">
       <div class="badge gold">Snarky Post</div>
-      <h2>Context Is Not Optional</h2>
-      <p class="card-date">June 18, 2025</p>
+      <h2>Don’t be the Tool in Your AI Relationship: AI Works Better as a Companion</h2>
+      <p class="card-date">June 19, 2025</p>
       <p class="card-excerpt">
-        In tech, in leadership, in AI—context isn’t just helpful. It’s survival.
+        You’re not using AI wrong. You’re just using it like a smart toaster. If you want results beyond warm output and emoji-laden bulleted lists, treat it like a collaborator. Talk to it. Teach it. Trust it. Then watch what happens...
       </p>
     </article>
   </a>
-   <article class="card blog-post">
-    <div class="badge gold">
-     Snarky Post
-    </div>
-    <h2>
-     Why Copilots Crash
-    </h2>
-    <p class="card-date">
-     June 15, 2025
-    </p>
-    <p class="card-excerpt">
-     The tool that helps you build things... can't remember what it just built.
-    </p>
-   </article>
-   <article class="card blog-post">
-    <div class="badge gold">
-     Snarky Post
-    </div>
-    <h2>
-     Context Is Not Optional
-    </h2>
-    <p class="card-date">
-     June 18, 2025
-    </p>
-    <p class="card-excerpt">
-     In tech, in leadership, in AI—context isn’t just helpful. It’s survival.
-    </p>
-   </article>
   </main>
   <footer class="site-footer">
    <p>&copy; 2025 Jenifer Jorgenson. All sarcasm (and rights) reserved.</p>
