--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
    </p>
   </section>
   <main class="card-container">
-  <a href="post1.html" class="card-link">
+  <a href="posts/openai-needs-pm.html" class="card-link">
     <article class="card blog-post">
       <div class="badge gold">Snarky Post</div>
       <h2>OpenAI Built the Ultimate Tool. But Clippy Might Still Win.</h2>
@@ -65,7 +65,7 @@
       </p>
     </article>
   </a>
-  <a href="post2.html" class="card-link">
+  <a href="posts/ai-as-companion.html" class="card-link">
     <article class="card blog-post">
       <div class="badge gold">Snarky Post</div>
       <h2>Don’t be the Tool in Your AI Relationship: AI Works Better as a Companion</h2>
