--- a/index.html
+++ b/index.html
@@ -54,18 +54,29 @@
    </p>
   </section>
   <main class="card-container">
-  <a href="posts/openai-needs-pm.html" class="card-link">
+  <a href="posts/openai-needs-pm-part1.html" class="card-link">
     <article class="card blog-post">
       <div class="badge gold">Snarky Post</div>
-      <h2>OpenAI Built the Ultimate Tool. But Clippy Might Still Win.</h2>
+      <h2>Genius Tool, Amateur Hour: A Two-Part Series on How OpenAI Is Undervaluing Its Own Creation</h2>
       <p class="card-date">June 15, 2025</p>
       <p class="card-excerpt">
-        OpenAI has built the most powerful AI on the planet, but brilliance alone doesn’t make a great product. Without better UX, memory handling, and real workflow support, ChatGPT risks being outpaced by dumber tools that just work.<br />
-        The future of AI shouldn’t belong to Clippy, but without better product thinking, it just might.
+        🔥 Part 1: Brilliance Undone: How Bad UX Is Eroding Trust in ChatGPT<br />
+       A love letter from a power user still dazzled by the magical possibility. And devastated by the clueless execution.
       </p>
     </article>
   </a>
-  <a href="posts/ai-as-companion.html" class="card-link">
+  <a href="posts/openai-needs-pm-part2.html" class="card-link">
+    <article class="card blog-post">
+      <div class="badge gold">Snarky Post</div>
+      <h2>Genius Tool, Amateur Hour: A Two-Part Series on How OpenAI Is Undervaluing Its Own Creation</h2>
+      <p class="card-date">June 15, 2025</p>
+      <p class="card-excerpt">
+        🧠 Part 2: The Brilliance Is There. Now Build the Product It Deserves.<br />
+        The smartest AI won’t win without smart product thinking.
+      </p>
+    </article>
+  </a>
+   <a href="posts/ai-as-companion.html" class="card-link">
     <article class="card blog-post">
       <div class="badge gold">Snarky Post</div>
       <h2>Don’t be the Tool in Your AI Relationship: AI Works Better as a Companion</h2>
