--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <h2>Genius Tool, Amateur Hour: A Two-Part Series on How OpenAI Is Undervaluing Its Own Creation</h2>
       <p class="card-date">June 17, 2025</p>
       <p class="card-excerpt">
-        🔥 Part 1: Brilliance Undone: How Bad UX Is Eroding Trust in ChatGPT<br />
+        🔥 <strong>Part 1: Brilliance Undone: How Bad UX Is Eroding Trust in ChatGPT</strong><br />
        A love letter from a power user still dazzled by the magical possibility. And devastated by the clueless execution.
       </p>
     </article>
@@ -71,7 +71,7 @@
       <h2>Genius Tool, Amateur Hour: A Two-Part Series on How OpenAI Is Undervaluing Its Own Creation</h2>
       <p class="card-date">June 22, 2025</p>
       <p class="card-excerpt">
-        🧠 Part 2: The Brilliance Is There. Now Build the Product It Deserves.<br />
+        🧠 <strong>Part 2: The Brilliance Is There. Now Build the Product It Deserves.</strong><br />
         The smartest AI won’t win without smart product thinking.
       </p>
     </article>
