--- a/posts.html
+++ b/posts.html
@@ -46,25 +46,25 @@
    </p>
   </section>
   <main class="card-container">
-  <a href="posts/openai-needs-pm-part1.html" class="card-link">
+  <a href="posts/openai-needs-pm-part2.html" class="card-link">
     <article class="card blog-post">
       <div class="badge gold">Snarky Post</div>
       <h2>Genius Tool, Amateur Hour: A Two-Part Series on How OpenAI Is Undervaluing Its Own Creation</h2>
-      <p class="card-date">June 17, 2025</p>
+      <p class="card-date">June 24, 2025</p>
       <p class="card-excerpt">
-        🔥 Part 1: Brilliance Undone: How Bad UX Is Eroding Trust in ChatGPT<br />
-         A love letter from a power user still dazzled by the magical possibility &mdash; and devastated by the clueless execution
+        🧠 <strong>Part 2: The Brilliance Is There. Now Build the Product It Deserves.</strong><br />
+         The smartest AI won’t win without smart product thinking.
       </p>
     </article>
   </a>
-  <a href="posts/openai-needs-pm-part2.html" class="card-link">
+   <a href="posts/openai-needs-pm-part1.html" class="card-link">
     <article class="card blog-post">
       <div class="badge gold">Snarky Post</div>
       <h2>Genius Tool, Amateur Hour: A Two-Part Series on How OpenAI Is Undervaluing Its Own Creation</h2>
       <p class="card-date">June 22, 2025</p>
       <p class="card-excerpt">
-        🧠 Part 2: The Brilliance Is There. Now Build the Product It Deserves.<br />
-         The smartest AI won’t win without smart product thinking.
+        🔥 <strong>Part 1: Brilliance Undone: How Bad UX Is Eroding Trust in ChatGPT</strong><br />
+         A love letter from a power user still dazzled by the magical possibility. And devastated by the clueless execution.
       </p>
     </article>
   </a>
@@ -72,7 +72,7 @@
     <article class="card blog-post">
       <div class="badge gold">Snarky Post</div>
       <h2>Don’t be the Tool in Your AI Relationship: AI Works Better as a Companion</h2>
-      <p class="card-date">June 24, 2025</p>
+      <p class="card-date">June 17, 2025</p>
       <p class="card-excerpt">
         You’re not using AI wrong. You’re just using it like a smart toaster. If you want results beyond warm output and emoji-laden bulleted lists, treat it like a collaborator. Talk to it. Teach it. Trust it. Then watch what happens...
       </p>
