--- a/posts.html
+++ b/posts.html
@@ -3,8 +3,7 @@
  <head>
   <meta charset="utf-8"/>
   <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-  <title>
-   All Snarky Posts
+  <title>SNARK FLOATS | Snarky Posts
   </title>
   <link href="style.css" rel="stylesheet"/>
  </head>
@@ -63,7 +62,7 @@
       <h2>Genius Tool, Amateur Hour: A Two-Part Series on How OpenAI Is Undervaluing Its Own Creation</h2>
       <p class="card-date">June 22, 2025</p>
       <p class="card-excerpt">
-        🔥 <strong>Part 1: Brilliance Undone: How Bad UX Is Eroding Trust in ChatGPT</strong><br />
+        ❤️‍🩹 <strong>Part 1: Brilliance Undone: How Bad UX Is Eroding Trust in ChatGPT</strong><br />
          A love letter from a power user still dazzled by the magical possibility. And devastated by the clueless execution.
       </p>
     </article>
