--- a/posts.html
+++ b/posts.html
@@ -63,7 +63,7 @@
       <p class="card-date">June 22, 2025</p>
       <p class="card-excerpt">
         ❤️‍🩹 <strong>Part 1: Brilliance Undone: How Bad UX Is Eroding Trust in ChatGPT</strong><br />
-         A love letter from a power user still dazzled by the magical possibility. And devastated by the clueless execution.
+         A love letter from a power user still dazzled by the magical possibility. And devastated by the disappointing execution.
       </p>
     </article>
   </a>
