--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <h2>Genius Tool, Amateur Hour: A Two-Part Series on How OpenAI Is Undervaluing Its Own Creation</h2>
       <p class="card-date">June 24, 2025</p>
       <p class="card-excerpt">
-        🧠 <strong>Part 2: The Brilliance Is There. Now Build the Product It Deserves.</strong><br />
+        💡 <strong>Part 2: The Brilliance Is There. Now Build the Product It Deserves.</strong><br />
         The smartest AI won’t win without smart product thinking.
       </p>
     </article>
