--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
   <section class="series-wrapper stacked-series">
   <div class="series-label">🧠 Genius Tool, Amateur Hour (2-Part Series)</div>
   <main class="card-container series-cards">
+       <span class="series-line"></span>
     <a href="posts/openai-needs-pm-part1.html" class="card-link">
       <article class="card blog-post connected-card">
         <div class="badge gold">Snarky Post</div>
