--- a/posts.html
+++ b/posts.html
@@ -76,6 +76,7 @@
 <section class="post-series-break">
   <!-- your next regular blog card goes here -->
 </section>
+ <main class="card-container">
    <a href="posts/ai-as-companion.html" class="card-link">
     <article class="card blog-post">
       <div class="badge gold">Snarky Post</div>
