--- a/index.html
+++ b/index.html
@@ -53,9 +53,10 @@
   </section>
   <!-- Series container -->
   <section class="series-wrapper stacked-series">
-  <main class="card-container series-cards">
   <div class="series-label">🧠 Genius Tool, Amateur Hour (2-Part Series)</div>
-       <span class="series-line"></span>
+     <div class="series-layout">
+      <span class="series-line"></span>
+    <main class="card-container series-cards">
     <a href="posts/openai-needs-pm-part1.html" class="card-link">
       <article class="card blog-post connected-card">
         <div class="badge gold">Snarky Post</div>
@@ -79,6 +80,7 @@
       </article>
     </a>
   </main>
+ </div>
 </section>
 <section class="post-series-break">
   <!-- your next regular blog card goes here -->
