--- a/posts.html
+++ b/posts.html
@@ -44,39 +44,29 @@
     I post when the mood strikes—usually when the snark is strong and the nonsense is louder than usual.
    </p>
   </section>
-  <!-- Series container -->
-  <section class="series-wrapper stacked-series">
-  <main class="card-container series-cards">
-  <div class="series-label">🧠 Genius Tool, Amateur Hour (2-Part Series)</div>
-       <span class="series-line"></span>
-    <a href="posts/openai-needs-pm-part1.html" class="card-link">
-      <article class="card blog-post connected-card">
-        <div class="badge gold">Snarky Post</div>
-        <h2>Genius Tool, Amateur Hour: A Two-Part Series on How OpenAI Is Undervaluing Its Own Creation</h2>
-        <p class="card-date">June 22, 2025</p>
-        <p class="card-excerpt">
-          ❤️‍🩹 <strong>Part 1: Brilliance Undone: How Bad UX Is Eroding Trust in ChatGPT</strong><br />
-          A love letter from a power user still dazzled by the magical possibility. And devastated by the disappointing execution.
-        </p>
-      </article>
-    </a>
-    <a href="posts/openai-needs-pm-part2.html" class="card-link">
-      <article class="card blog-post connected-card">
-        <div class="badge gold">Snarky Post</div>
-        <h2>Genius Tool, Amateur Hour: A Two-Part Series on How OpenAI Is Undervaluing Its Own Creation</h2>
-        <p class="card-date">June 24, 2025</p>
-        <p class="card-excerpt">
-          💡 <strong>Part 2: The Brilliance Is There. Now Build the Product It Deserves.</strong><br />
-          The smartest AI won’t win without smart product thinking.
-        </p>
-      </article>
-    </a>
-  </main>
-</section>
-<section class="post-series-break">
-  <!-- your next regular blog card goes here -->
-</section>
- <main class="card-container">
+  <main class="card-container">
+  <a href="posts/openai-needs-pm-part2.html" class="card-link">
+    <article class="card blog-post">
+      <div class="badge gold">Snarky Post</div>
+      <h2>Genius Tool, Amateur Hour: A Two-Part Series on How OpenAI Is Undervaluing Its Own Creation</h2>
+      <p class="card-date">June 24, 2025</p>
+      <p class="card-excerpt">
+        💡 <strong>Part 2: The Brilliance Is There. Now Build the Product It Deserves.</strong><br />
+         The smartest AI won’t win without smart product thinking.
+      </p>
+    </article>
+  </a>
+   <a href="posts/openai-needs-pm-part1.html" class="card-link">
+    <article class="card blog-post">
+      <div class="badge gold">Snarky Post</div>
+      <h2>Genius Tool, Amateur Hour: A Two-Part Series on How OpenAI Is Undervaluing Its Own Creation</h2>
+      <p class="card-date">June 22, 2025</p>
+      <p class="card-excerpt">
+        ❤️‍🩹 <strong>Part 1: Brilliance Undone: How Bad UX Is Eroding Trust in ChatGPT</strong><br />
+         A love letter from a power user still dazzled by the magical possibility. And devastated by the disappointing execution.
+      </p>
+    </article>
+  </a>
    <a href="posts/ai-as-companion.html" class="card-link">
     <article class="card blog-post">
       <div class="badge gold">Snarky Post</div>
