--- a/index.html
+++ b/index.html
@@ -52,21 +52,10 @@
    </p>
   </section>
   <main class="card-container">
-  <a href="posts/openai-needs-pm-part2.html" class="card-link">
-    <article class="card blog-post">
-      <div class="badge gold">Snarky Post</div>
-      <h2>Genius Tool, Amateur Hour: A Two-Part Series on How OpenAI Is Undervaluing Its Own Creation</h2>
-      <p class="card-date">June 24, 2025</p>
-      <p class="card-excerpt">
-        💡 <strong>Part 2: The Brilliance Is There. Now Build the Product It Deserves.</strong><br />
-        The smartest AI won’t win without smart product thinking.
-      </p>
-    </article>
-  </a>
    <a href="posts/openai-needs-pm-part1.html" class="card-link">
     <article class="card blog-post">
       <div class="badge gold">Snarky Post</div>
-      <h2>Genius Tool, Amateur Hour: A Two-Part Series on How OpenAI Is Undervaluing Its Own Creation</h2>
+      <h2>PART 1: Genius Tool, Amateur Hour: A Two-Part Series on How OpenAI Is Undervaluing Its Own Creation</h2>
       <p class="card-date">June 22, 2025</p>
       <p class="card-excerpt">
         ❤️‍🩹 <strong>Part 1: Brilliance Undone: How Bad UX Is Eroding Trust in ChatGPT</strong><br />
@@ -74,7 +63,18 @@
       </p>
     </article>
   </a>
-   <a href="posts/ai-as-companion.html" class="card-link">
+  <a href="posts/openai-needs-pm-part2.html" class="card-link">
+    <article class="card blog-post">
+      <div class="badge gold">Snarky Post</div>
+      <h2>PART 2: Genius Tool, Amateur Hour: A Two-Part Series on How OpenAI Is Undervaluing Its Own Creation</h2>
+      <p class="card-date">June 24, 2025</p>
+      <p class="card-excerpt">
+        💡 <strong>Part 2: The Brilliance Is There. Now Build the Product It Deserves.</strong><br />
+        The smartest AI won’t win without smart product thinking.
+      </p>
+    </article>
+  </a>
+  <a href="posts/ai-as-companion.html" class="card-link">
     <article class="card blog-post">
       <div class="badge gold">Snarky Post</div>
       <h2>Don’t be the Tool in Your AI Relationship: AI Works Better as a Companion</h2>
