--- a/posts.html
+++ b/posts.html
@@ -45,25 +45,25 @@
    </p>
   </section>
   <main class="card-container">
-  <a href="posts/openai-needs-pm-part2.html" class="card-link">
-    <article class="card blog-post">
-      <div class="badge gold">Snarky Post</div>
-      <h2>Genius Tool, Amateur Hour: A Two-Part Series on How OpenAI Is Undervaluing Its Own Creation</h2>
-      <p class="card-date">June 24, 2025</p>
-      <p class="card-excerpt">
-        💡 <strong>Part 2: The Brilliance Is There. Now Build the Product It Deserves.</strong><br />
-         The smartest AI won’t win without smart product thinking.
-      </p>
-    </article>
-  </a>
    <a href="posts/openai-needs-pm-part1.html" class="card-link">
     <article class="card blog-post">
       <div class="badge gold">Snarky Post</div>
-      <h2>Genius Tool, Amateur Hour: A Two-Part Series on How OpenAI Is Undervaluing Its Own Creation</h2>
+      <h2>PART 1: Genius Tool, Amateur Hour: A Two-Part Series on How OpenAI Is Undervaluing Its Own Creation</h2>
       <p class="card-date">June 22, 2025</p>
       <p class="card-excerpt">
         ❤️‍🩹 <strong>Part 1: Brilliance Undone: How Bad UX Is Eroding Trust in ChatGPT</strong><br />
          A love letter from a power user still dazzled by the magical possibility. And devastated by the disappointing execution.
+      </p>
+    </article>
+  </a>
+  <a href="posts/openai-needs-pm-part2.html" class="card-link">
+    <article class="card blog-post">
+      <div class="badge gold">Snarky Post</div>
+      <h2>PART 2: Genius Tool, Amateur Hour: A Two-Part Series on How OpenAI Is Undervaluing Its Own Creation</h2>
+      <p class="card-date">June 24, 2025</p>
+      <p class="card-excerpt">
+        💡 <strong>Part 2: The Brilliance Is There. Now Build the Product It Deserves.</strong><br />
+         The smartest AI won’t win without smart product thinking.
       </p>
     </article>
   </a>
