--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
     Welcome to Snark Floats
    </h2>
    <p>
-    I’m not here to hold your hand. This is the place where I drag my own half-drowned thoughts onto a life raft made of sarcasm, sharp humor, and stubborn honesty — and if you want to climb aboard, you’re welcome.
+    I’m not here to hold your hand. This is the place where I drag my own half-drowned thoughts onto a life raft made of sarcasm, sharp humor, and stubborn honesty. And if you want to climb aboard, you’re welcome. Thia ain't the Titanic, and I'm not hogging the door.
    </p>
    <p>
-    This isn’t a public service. It’s survival. I call bullshit where I see it — on bad tech, bad storytelling, bad history, corporate evil, and the small stupid things that try to sink us all.
+    This isn’t a public service. It’s survival. My survival. I call bullshit where I see it&mdash;on bad tech, bad storytelling, bad history, corporate evil, and the small stupid things that try to sink us all.
    </p>
    <p>
-    Life’s a mess. Snark floats. Grab a seat if you can handle it. If not, there are plenty of other lifeboats out there, filled with Pinterest quotes and toxic positivity. Good luck. You’ll need it…
+    Life’s a mess. Snark floats. Grab a seat if you can handle it. If not, there are plenty of other lifeboats out there, filled with Pinterest quotes and toxic positivity. Good luck. You’ll need it...
    </p>
   </section>
   <main class="card-container">
