--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       </p>
     </article>
   </a>
-  <a href="posts/ai-as-companion.html" class="card-link">
+  <!-- a href="posts/ai-as-companion.html" class="card-link">
     <article class="card blog-post">
       <div class="badge gold">Snarky Post</div>
       <h2>Don’t be the Tool in Your AI Relationship: AI Works Better as a Companion</h2>
@@ -83,7 +83,7 @@
         You’re not using AI wrong. You’re just using it like a smart toaster. If you want results beyond warm output and emoji-laden bulleted lists, treat it like a collaborator. Talk to it. Teach it. Trust it. Then watch what happens...
       </p>
     </article>
-  </a>
+  </a -->
   </main>
   <footer class="site-footer">
    <p>&copy; 2025 Jenifer Jorgenson. All sarcasm (and rights) reserved.</p>
