--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>SNARK FLOATS</title>
   <link href="style.css" rel="stylesheet"/>
   <link href="https://fonts.googleapis.com/css2?family=Inter&amp;display=swap" rel="stylesheet"/>
+  <link rel="manifest" href="/site.webmanifest">
  </head>
  <body>
   <header class="site-header">
