--- a/posts.html
+++ b/posts.html
@@ -5,6 +5,8 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
   <title>SNARK FLOATS | Snarky Posts
   </title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter&amp;display=swap" rel="stylesheet"/>
+  <link rel="manifest" href="/site.webmanifest">
   <link href="style.css" rel="stylesheet"/>
  </head>
  <body>
