--- a/snarklevision.html
+++ b/snarklevision.html
@@ -4,8 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Snarklevision - Dreamcast Cards</title>
-  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@600&family=Work+Sans&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter&amp;display=swap" rel="stylesheet"/>
+  <link rel="manifest" href="/site.webmanifest">
+  <link href="style.css" rel="stylesheet"/>
 </head>
 <body>
   <main class="card-container">
