--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     Welcome to Snark Floats
    </h2>
    <p>
-    I’m not here to hold your hand. This is the place where I drag my own half-drowned thoughts onto a life raft made of sarcasm, sharp humor, and stubborn honesty. And if you want to climb aboard, you’re welcome. Thia ain't the Titanic, and I'm not hogging the door.
+    I’m not here to hold your hand. This is the place where I drag my own half-drowned thoughts onto a life raft made of sarcasm, sharp humor, and stubborn honesty. And if you want to climb aboard, you’re welcome. This ain't the Titanic, and I'm not hogging the door.
    </p>
    <p>
     This isn’t a public service. It’s survival. My survival. I call bullshit where I see it&mdash;on bad tech, bad storytelling, bad history, corporate evil, and the small stupid things that try to sink us all.
