--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       SNARK FLOATS
      </a>
     </h1>
+        <span class="site-tagline">Sarcasm. Sanity. Survival.</span>
     <nav>
      <ul>
       <li>
