--- a/index.html
+++ b/index.html
@@ -9,35 +9,21 @@
   <link rel="manifest" href="/site.webmanifest">
  </head>
  <body>
-  <header class="site-header">
-   <div class="header-inner">
-    <h1 class="site-title">
-     <a href="index.html">
-      SNARK FLOATS
-     </a>
-    </h1>
-        <span class="site-tagline">Sarcasm. Sanity. Survival.</span>
+<header class="site-header">
+  <div class="header-inner">
+    <div class="site-title-tagline">
+      <h1 class="site-title"><a href="index.html">SNARK FLOATS</a></h1>
+      <span class="site-tagline">Sarcasm. Sanity. Survival.</span>
+    </div>
     <nav>
-     <ul>
-      <li>
-       <a href="posts.html">
-        Snarky Posts
-       </a>
-      </li>
-      <li>
-       <a href="about.html">
-        About Snark
-       </a>
-      </li>
-      <li>
-       <a href="about.html#contact">
-        Contact
-       </a>
-      </li>
-     </ul>
+      <ul>
+        <li><a href="posts.html">Snarky Posts</a></li>
+        <li><a href="about.html">About Snark</a></li>
+        <li><a href="about.html#contact">Contact</a></li>
+      </ul>
     </nav>
-   </div>
-  </header>
+  </div>
+</header>
   <section class="site-intro">
    <img alt="Snark Floats banner with colorful balloons" class="hero-banner" src="images/main/snark_floats_banner.webp"/>
    <h2 class="intro-heading">
