--- a/index.html
+++ b/index.html
@@ -33,10 +33,11 @@
     I’m not here to hold your hand. This is the place where I drag my own half-drowned thoughts onto a life raft made of sarcasm, sharp humor, and stubborn honesty. And if you want to climb aboard, you’re welcome. This ain't the Titanic, and I'm not hogging the door.
    </p>
    <p>
-    This isn’t a public service. It’s survival. My survival. I call bullshit where I see it&mdash;on bad tech, bad storytelling, bad history, corporate evil, and the small stupid things that try to sink us all.
+    This isn’t a public service. It’s survival. <em>My</em> survival. I call bullshit where I see it&mdash;on bad tech, bad storytelling, bad history, corporate evil, and the small stupid things that try to sink us one annoyance at a time.
    </p>
    <p>
-    Life’s a mess. Snark floats. Grab a seat if you can handle it. If not, there are plenty of other lifeboats out there, filled with Pinterest quotes and toxic positivity. Good luck. You’ll need it...
+    Life’s a mess. Snark floats.<br />
+    Grab a seat if you can handle it. If not, there are plenty of other lifeboats out there padded with Pinterest quotes and toxic positivity. Good luck. You’ll need it.
    </p>
   </section>
   <main class="card-container">
