--- a/about.html
+++ b/about.html
@@ -1,2 +1,31 @@
-<!-- About Page -->
-<section class='section section-gold'><h2>About the Blog</h2><p>What's it about? Who's Jenifer? Why a blog?</p></section>
+<!DOCTYPE html>
+<html lang="en">
+ <head>
+  <meta charset="utf-8"/>
+  <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+  <title>SNARK FLOATS</title>
+  <link href="style.css" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/css2?family=Inter&amp;display=swap" rel="stylesheet"/>
+  <link rel="manifest" href="/site.webmanifest">
+ </head>
+ <body>
+<header class="site-header">
+  <div class="header-inner">
+    <div class="site-title-tagline">
+      <h1 class="site-title"><a href="index.html">SNARK FLOATS</a></h1>
+      <span class="site-tagline">Sarcasm. Sanity. Survival.</span>
+    </div>
+    <nav>
+      <ul>
+        <li><a href="posts.html">Snarky Posts</a></li>
+        <li><a href="about.html">About Snark</a></li>
+        <li><a href="about.html#contact">Contact</a></li>
+      </ul>
+    </nav>
+  </div>
+</header>
+  <!-- section class="site-intro">
+   <img alt="Snark Floats banner with colorful balloons" class="hero-banner" src="images/main/snark_floats_banner.webp"/>
+   <h2 class="intro-heading" -->
+ </body>
+</html>
