--- a/posts.html
+++ b/posts.html
@@ -10,34 +10,21 @@
   <link href="style.css" rel="stylesheet"/>
  </head>
  <body>
-  <header class="site-header">
-   <div class="header-inner">
-    <h1 class="site-title">
-     <a href="index.html">
-      SNARK FLOATS
-     </a>
-    </h1>
+<header class="site-header">
+  <div class="header-inner">
+    <div class="site-title-tagline">
+      <h1 class="site-title"><a href="index.html">SNARK FLOATS</a></h1>
+      <span class="site-tagline">Sarcasm. Sanity. Survival.</span>
+    </div>
     <nav>
-     <ul>
-      <li>
-       <a href="posts.html">
-        Snarky Posts
-       </a>
-      </li>
-      <li>
-       <a href="about.html">
-        About Snark
-       </a>
-      </li>
-      <li>
-       <a href="about.html#contact">
-        Contact
-       </a>
-      </li>
-     </ul>
+      <ul>
+        <li><a href="posts.html">Snarky Posts</a></li>
+        <li><a href="about.html">About Snark</a></li>
+        <li><a href="about.html#contact">Contact</a></li>
+      </ul>
     </nav>
-   </div>
-  </header>
+  </div>
+</header>
   <section class="site-intro">
    <h2 class="intro-heading">
     Snarky Posts
