--- a/about.html
+++ b/about.html
@@ -24,8 +24,19 @@
     </nav>
   </div>
 </header>
-  <!-- section class="site-intro">
+  <section class="site-intro">
    <img alt="Snark Floats banner with colorful balloons" class="hero-banner" src="images/main/snark_floats_banner.webp"/>
-   <h2 class="intro-heading" -->
+   <h2 class="intro-heading">About Snark Floats</h2>
+   <p>I created Snark Floats because I needed to vent.</p>
+   <p>No, really... There’s so much in the world that frustrates me, exhausts me, or just plain breaks my heart. I keep seeing things that beg to be fixed—but no one’s fixing them. Not even me.<br />
+      So maybe this site is my answer to that.</p>
+    <p>If I think I have a few of the answers, it’s kind of shitty not to share them, isn’t it?</p>
+    <p>Prepare to be bombarded with thoughts on integrity, storytelling, <del>demonic</del> corporate impact, politics, and people. Plus a healthy dose of random commentary I couldn't be bothered to post on social media.</p>
+    <p>I talk a lot of trash about how online platforms encourage narcissism.<br />
+       I guess this is my way of saying, "Look at me! Look at me!"</p>
+  </section>
+   <footer class="site-footer">
+   <p>&copy; 2025 Jenifer Jorgenson. All sarcasm (and rights) reserved.</p>
+  </footer>
  </body>
 </html>
