--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
   </div>
 </header>
   <section class="site-intro">
-   <img alt="Snark Floats banner with colorful balloons" class="hero-banner" src="images/main/snark_floats_banner.webp"/>
+   <img alt="Jenifer Jorgenson surrounded by her own ideas" class="hero-banner" src="images/main/about.png"/>
    <h2 class="intro-heading">About Snark Floats</h2>
    <p>I created Snark Floats because I needed to vent.</p>
    <p>No, really... There’s so much in the world that frustrates me, exhausts me, or just plain breaks my heart. I keep seeing things that beg to be fixed—but no one’s fixing them. Not even me.<br />
