--- a/about.html
+++ b/about.html
@@ -35,6 +35,34 @@
     <p>I talk a lot of trash about how online platforms encourage narcissism.<br />
        I guess this is my way of saying, "Look at me! Look at me!"</p>
   </section>
+  <section class="about-columns">
+  <div class="about-column">
+    <h3>What’s It About?</h3>
+    <p>Pop culture, product thinking, storytelling, technology, and the systems that quietly (or not-so-quietly) shape our lives. Also limericks, fictional breakdowns, video games, and the occasional rant. These aren’t impulsive posts. They’re fully formed opinions wrapped in sarcasm and spiked with sincerity.</p>
+  </div>
+  <div class="about-column">
+    <h3>Who’s Jenifer?</h3>
+    <p>A writer. A product manager. A gamer with a decades-long MMO habit and a soft spot for complicated characters. Jenifer Jorgenson is a pen name, but the thoughts are entirely mine.<br />
+       I’m here to say the things no one’s supposed to say out loud, and I do it with precision, not performance.<br />
+       The humor isn’t for you. It’s for me.</p>
+  </div>
+  <div class="about-column">
+    <h3>Why a Blog?</h3>
+    <p>Because the world is already full of posts trying to please everyone. This one isn’t. I built <em>Snark Floats</em> to make sense of things on my terms. If the thoughts are sharp, it’s because the world made them that way. If they float, it’s because I needed something that wouldn’t sink.<br />
+       Mostly to make sure I don’t drown.</p>
+  </div>
+</section>
+<section class="site-intro">
+  <p>You won’t find a lot of happy thoughts here.</p>
+  <p>It’s not that I’m unhappy. I’m honestly not. I already share that with the people I love.<br />
+     This is for everyone else. Or maybe it’s just for me.</p>
+  <p>I needed space to be all of myself. No filtering. No code-switching. No polite edits. Not the version of me that’s careful at work, where offending the wrong person can derail your career. Not the version friends and family get when they’re tired of hearing it. And definitely not the 200-character quip that dies on social media unless there’s a meme attached.</p>
+  <p>This is where I don’t whisper. I won’t be silenced.</p>
+  <p>This might be the one place where it’s all about me&mdash;and I get to be the whole damn thing.<br />
+     Writer. World-builder. Gamer. Thinker. Woman. Giggler. Occasional rage-monkey.</p>
+  <p>I’m putting it all out there.<br />
+   I hope you like it. But if you don’t, you know where the door is.</p>
+</section>
    <footer class="site-footer">
    <p>&copy; 2025 Jenifer Jorgenson. All sarcasm (and rights) reserved.</p>
   </footer>
