--- a/about.html
+++ b/about.html
@@ -52,16 +52,21 @@
        Mostly to make sure I don’t drown.</p>
   </div>
 </section>
-<section class="site-intro">
-  <p>You won’t find a lot of happy thoughts here.</p>
-  <p>It’s not that I’m unhappy. I’m honestly not. I already share that with the people I love.<br />
-     This is for everyone else. Or maybe it’s just for me.</p>
-  <p>I needed space to be all of myself. No filtering. No code-switching. No polite edits. Not the version of me that’s careful at work, where offending the wrong person can derail your career. Not the version friends and family get when they’re tired of hearing it. And definitely not the 200-character quip that dies on social media unless there’s a meme attached.</p>
-  <p>This is where I don’t whisper. I won’t be silenced.</p>
-  <p>This might be the one place where it’s all about me&mdash;and I get to be the whole damn thing.<br />
-     Writer. World-builder. Gamer. Thinker. Woman. Giggler. Occasional rage-monkey.</p>
-  <p>I’m putting it all out there.<br />
-   I hope you like it. But if you don’t, you know where the door is.</p>
+<section class="about-bottom">
+  <div class="about-bottom-text">
+    <p>You won’t find a lot of happy thoughts here.</p>
+    <p>It’s not that I’m unhappy. I’m honestly not. I already share that with the people I love.<br />
+       This is for everyone else. Or maybe it’s just for me.</p>
+    <p>I needed space to be all of myself. No filtering. No code-switching. No polite edits. Not the version of me that’s careful at work, where offending the wrong person can derail your career. Not the version friends and family get when they’re tired of hearing it. And definitely not the 200-character quip that dies on social media unless there’s a meme attached.</p>
+    <p>This is where I don’t whisper. I won’t be silenced.</p>
+    <p>This might be the one place where it’s all about me&mdash;and I get to be the whole damn thing.<br />
+       Writer. World-builder. Gamer. Thinker. Woman. Giggler. Occasional rage-monkey.</p>
+    <p>I’m putting it all out there.<br />
+     I hope you like it. But if you don’t, you know where the door is.</p>
+  </div>
+  <div class="about-bottom-image">
+    <!-- img src="your-image.jpg" alt="Illustration of Jenifer Jorgenson" / -->
+  </div>
 </section>
    <footer class="site-footer">
    <p>&copy; 2025 Jenifer Jorgenson. All sarcasm (and rights) reserved.</p>
