--- a/about.html
+++ b/about.html
@@ -3,10 +3,11 @@
  <head>
   <meta charset="utf-8"/>
   <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-  <title>SNARK FLOATS</title>
-  <link href="style.css" rel="stylesheet"/>
+  <title>SNARK FLOATS | About Snark Floats
+  </title>
   <link href="https://fonts.googleapis.com/css2?family=Inter&amp;display=swap" rel="stylesheet"/>
   <link rel="manifest" href="/site.webmanifest">
+  <link href="style.css" rel="stylesheet"/>
  </head>
  <body>
 <header class="site-header">
