--- a/about.html
+++ b/about.html
@@ -25,6 +25,7 @@
     </nav>
   </div>
 </header>
+  <div class="about-container">
 <section class="about-top">
    <div class="about-top-image">
      <img alt="Jenifer Jorgenson surrounded by her own ideas" src="images/main/about_intro.png"/>
@@ -73,6 +74,7 @@
     <!-- img src="your-image.jpg" alt="Illustration of Jenifer Jorgenson" / -->
   </div>
 </section>
+  </div>
    <footer class="site-footer">
    <p>&copy; 2025 Jenifer Jorgenson. All sarcasm (and rights) reserved.</p>
   </footer>
