--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
      <img alt="Jenifer Jorgenson surrounded by her own ideas" src="images/main/about_intro.png"/>
    </div>
    <div class="about-top-text">
-     <h2 class="intro-heading">About Snark Floats</h2>
+     <h2>About Snark Floats</h2>
      <p>I created Snark Floats because I needed to vent.</p>
      <p>No, really... There’s so much in the world that frustrates me, exhausts me, or just plain breaks my heart. I keep seeing things that beg to be fixed—but no one’s fixing them. Not even me.<br />
         So maybe this site is my answer to that.</p>
@@ -60,6 +60,7 @@
 </section>
 <section class="about-bottom">
   <div class="about-bottom-text">
+   <h2>The Real Answer</h2>
     <p>You won’t find a lot of happy thoughts here.</p>
     <p>It’s not that I’m unhappy. I’m honestly not. I already share that with the people I love.<br />
        This is for everyone else. Or maybe it’s just for me.</p>
