--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
   <section class="about-columns">
   <div class="about-column">
     <h3>What’s It About?</h3>
-    <p>Pop culture, product thinking, storytelling, technology, and the systems that quietly (or not-so-quietly) shape our lives. Also limericks, fictional breakdowns, video games, and the occasional rant. These aren’t impulsive posts. They’re fully formed opinions wrapped in sarcasm and spiked with sincerity.</p>
+    <p>Pop culture, product thinking, storytelling, technology, society, and the systems that quietly (or not-so-quietly) shape our lives. Also limericks, fictional breakdowns, video games, and periodic rants. These aren’t impulsive posts. They’re fully formed opinions wrapped in sarcasm and spiked with sincerity.</p>
   </div>
   <div class="about-column">
     <h3>Who’s Jenifer?</h3>
