--- a/about.html
+++ b/about.html
@@ -72,7 +72,7 @@
      I hope you like it. But if you don’t, you know where the door is.</p>
   </div>
   <div class="about-bottom-image">
-    <!-- img src="your-image.jpg" alt="Illustration of Jenifer Jorgenson" / -->
+    <img src="images/main/about_bottom.png" alt="Who is Jenifer?" />
   </div>
 </section>
   </div>
