--- a/about.html
+++ b/about.html
@@ -59,8 +59,9 @@
   </div>
 </section>
 <section class="about-bottom">
-  <div class="about-bottom-text">
-   <h2>The Real Answer</h2>
+    <h2>The Real Answer</h2>
+<div class="about-bottom-wrapper">
+ <div class="about-bottom-text">
     <p>You won’t find a lot of happy thoughts here.</p>
     <p>It’s not that I’m unhappy. I’m honestly not. I already share that with the people I love.<br />
        This is for everyone else. Or maybe it’s just for me.</p>
@@ -74,6 +75,7 @@
   <div class="about-bottom-image">
     <img src="images/main/about_bottom.png" alt="Who is Jenifer?" />
   </div>
+</div>
 </section>
   </div>
    <footer class="site-footer">
