--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
   </div>
 </header>
   <div class="about-container">
-<section class="about-top">
+<section class="about-top-wrapper">
    <div class="about-top-image">
      <img alt="Jenifer Jorgenson surrounded by her own ideas" src="images/main/about_intro.png"/>
    </div>
