--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 <header class="site-header">
   <div class="header-inner">
     <div class="site-title-tagline">
-      <h1 class="site-title"><a href="index.html">SNARK FLOATS</a></h1>
+      <h1 class="site-title"><a href="/index.html">SNARK FLOATS</a></h1>
       <span class="site-tagline">Sarcasm. Sanity. Survival.</span>
     </div>
     <nav>
       <ul>
-        <li><a href="posts.html">Snarky Posts</a></li>
-        <li><a href="about.html">About Snark</a></li>
-        <li><a href="about.html#contact">Contact</a></li>
+        <li><a href="/posts.html">Snarky Posts</a></li>
+        <li><a href="/about.html">About Snark</a></li>
+        <li><a href="/about.html#contact">Contact</a></li>
       </ul>
     </nav>
   </div>
