--- a/contact.html
+++ b/contact.html
@@ -52,10 +52,10 @@
   <p>
     <label for="snark-type">What kind of snark are you sending me? <span class="required">*</span></label><br>
     <select id="snark-type" name="snark-type" required>
-      <option value="">Select one option</option>
+      <option value=""> --Select one --</option>
       <option>Happy Thoughts & Well Wishes</option>
-      <option>Brutal Corporate Limericks</option>
       <option>Groundbreaking DreamCast Ideas</option>
+      <!-- option>Brutal Corporate Limericks</option -->
       <option>Hate Mail</option>
       <option>Other</option>
     </select>
