--- a/contact.html
+++ b/contact.html
@@ -25,13 +25,17 @@
     </nav>
   </div>
 </header>
-<section class="contact-intro">
+<section class="contact-section">
+ <div class="contact-intro">
    <img src="images/main/snarkmail.png" alt="Talk Snarky to Me art" />
+  <div class=contact-text">
 <h2>Talk Snarky to Me!</h2>
 <p>Engage with my posts and share your thoughts. I don't shy away from criticism.<br />
   Or send in your corporate limericks or dream cast ideas&mdash;the more the merrier.</p>
 <p>Feedback and dialogue make this blog a community for anyone who appreciates honesty, humor, and sarcasm.<br />
   Who knows? Maybe your snark floats, too...</p>
+  </div>
+ </div>
 </section>
    <hr>
 <form name="contact" method="POST" data-netlify="true" netlify-honeypot="bot-field">
