--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
 <section class="contact-section">
  <div class="contact-intro">
    <img src="images/main/snarkmail.png" alt="Talk Snarky to Me art" />
-  <div class=contact-text">
+  <div class="contact-text">
 <h2>Talk Snarky to Me!</h2>
 <p>Engage with my posts and share your thoughts. I don't shy away from criticism.<br />
   Or send in your corporate limericks or dream cast ideas&mdash;the more the merrier.</p>
