--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
   </div>
 
   <div class="form-field">
-    <label for="snark-type">What kind of snark are you sending me? <span class="required">*</span></label><br>
+    <label for="snark-type">What kind of snark are you sending me? <span class="required">*</span></label>
     <select id="snark-type" name="snark-type" required>
       <option value=""> --Select one --</option>
       <option>Happy Thoughts & Well Wishes</option>
@@ -66,7 +66,7 @@
   </div>
 
   <div class="form-field">
-    <label for="message">The Meat <span class="required">*</span></label><br>
+    <label for="message">The Meat <span class="required">*</span></label>
     <textarea id="message" name="message" rows="5" required></textarea>
   </div>
 
