--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,8 @@
   </div>
  </div>
 </section>
-<form name="contact" method="POST" data-netlify="true" netlify-honeypot="bot-field">
+ <form name="contact" method="POST" action="/contact.html" data-netlify="true" netlify-honeypot="bot-field">
+
   <input type="hidden" name="form-name" value="contact" />
   <div class="hidden">
     <label>Don’t fill this out if you’re human: <input name="bot-field" /></label>
