--- a/success.html
+++ b/success.html
@@ -34,3 +34,8 @@
     <p>I'll take a look and get back to you if needed. Your snark has been safely delivered.</p>
     <a href="/index.html">Return Home</a>
   </div>
+  <footer class="site-footer">
+   <p>&copy; 2025 Jenifer Jorgenson. All sarcasm (and rights) reserved.</p>
+  </footer>
+ </body>
+</html>
