--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
   </div>
  </div>
 </section>
- <form name="contact" method="POST" action="/success.html" data-netlify="true" netlify-honeypot="bot-field">
+ <form name="contact" method="POST" action="/success" data-netlify="true" netlify-honeypot="bot-field">
 
   <input type="hidden" name="form-name" value="contact" />
   <div class="hidden">
