--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <ul>
         <li><a href="/posts.html">Snarky Posts</a></li>
         <li><a href="/about.html">About Snark</a></li>
-        <li><a href="/about.html#contact">Contact</a></li>
+        <li><a href="/contact.html">Contact</a></li>
       </ul>
     </nav>
   </div>
