--- a/about.html
+++ b/about.html
@@ -45,18 +45,18 @@
   <section class="about-columns">
   <div class="about-column">
     <h3>What’s It About?</h3>
-    <p>Pop culture, product thinking, storytelling, technology, society, and the systems that quietly (or not-so-quietly) shape our lives. Also limericks, fictional breakdowns, video games, and periodic rants. These aren’t impulsive posts. They’re fully formed opinions wrapped in sarcasm and spiked with sincerity.</p>
+    Pop culture, product thinking, storytelling, technology, society, and the systems that quietly (or not-so-quietly) shape our lives. Also limericks, fictional breakdowns, video games, and periodic rants. These aren’t impulsive posts. They’re fully formed opinions wrapped in sarcasm and spiked with sincerity.
   </div>
   <div class="about-column">
     <h3>Who’s Jenifer?</h3>
-    <p>A writer. A product manager. A gamer with a decades-long MMO habit and a soft spot for complicated characters. Jenifer Jorgenson is a pen name, but the thoughts are entirely mine.<br />
+       A writer. A product manager. A gamer with a decades-long MMO habit and a soft spot for complicated characters. Jenifer Jorgenson is a pen name, but the thoughts are entirely mine.<br />
        I’m here to say the things no one’s supposed to say out loud, and I do it with precision, not performance.<br />
-       The humor isn’t for you. It’s for me.</p>
+       The humor isn’t for you. It’s for me.
   </div>
   <div class="about-column">
     <h3>Why a Blog?</h3>
-    <p>Because the world is already full of posts trying to please everyone. This one isn’t. I built <em>Snark Floats</em> to make sense of things on my terms. If the thoughts are sharp, it’s because the world made them that way. If they float, it’s because I needed something that wouldn’t sink.<br />
-       Mostly to make sure I don’t drown.</p>
+       Because the world is already full of posts trying to please everyone. This one isn’t. I built <em>Snark Floats</em> to make sense of things on my terms. If the thoughts are sharp, it’s because the world made them that way. If they float, it’s because I needed something that wouldn’t sink.<br />
+       Mostly to make sure I don’t drown.
   </div>
 </section>
    <hr>
